Added delete shortcut that allows to delete product nodes while tagging.

--- a/sites/all/modules/custom/photo_tagger/photo_tagger.css
+++ b/sites/all/modules/custom/photo_tagger/photo_tagger.css
@@ -11,8 +11,10 @@
 }
 
 .image-pool {
+  background-color: #DDD;
+  min-height: 400px;
+  min-width: 400px;
   float: left;
-  max-height: 400px;
 }
 
 .image-pool .active {
@@ -51,7 +53,7 @@
 }
 
 #helpbar {
-  height:200px;
+  height:230px;
   float: left;
   margin-left: 20px;
   background: #ddd;
@@ -94,8 +96,8 @@
 
 }
 
+.tagsinput-title,
 .shortcut-title {
-  float: left;
   width: 100%;
   display: inline-block;
   padding: 10px 0 10px 0;
@@ -108,12 +110,17 @@
 
 
 #message-bar {
-  float: left;
-  margin-left: 20px;
-  padding: 10px 0;
-  width: 200px;
-  font-size: 13px;
-  color: #666;
+  position: fixed;
+  bottom: 0;
+  left:0;
+  padding: 20px;
+  width: 100%;
+  font-size: 15px;
+  color: #FFF;
+  background-color: #333;
+}
+#message {
+  margin-left: 50px;
 }
 
 .page-photographer-tag #inner-wrapper {
