--- a/sites/all/modules/custom/photo_tagger/photo_tagger.css
+++ b/sites/all/modules/custom/photo_tagger/photo_tagger.css
@@ -10,6 +10,10 @@
   margin-top:20px;
 }
 
+.page-photographer-tag #inner-wrapper {
+  overflow: hidden;
+}
+
 .image-pool {
   background-color: #DDD;
   min-height: 400px;
@@ -31,18 +35,37 @@
 }
 
 .image-pool #counter {
-  border: 1px #666 solid;
-  background: white;
+  color: #FFF;
   padding: 5px;
   position: absolute;
+  font-weight: 800;
+  z-index: 2;
+}
+
+#counter-background {
+  position: absolute;
+  background-color: #000;
+  opacity: 0.2;
+  width: 70px;
+  height: 30px;
+  z-index: 1;
+}
+  
+#current {
+  float: left;
+  min-width: 30px;
+  text-align: right;
+  padding-right: 3px;
+}
+
+#total {
+  float: left;
 }
 
 #tagger-scope {
   display: none;
   margin-bottom: 20px;
 }
-
-
 
 #tagger-input {
   display: block;
@@ -54,7 +77,7 @@
 
 #tagger-input fieldset {
   padding: 0;
-  margin:0;
+  margin: 0;
 }
 
 #helpbar {
@@ -64,7 +87,6 @@
   background: #ddd;
 }
 
-#helpbar .active {}
 #helpbar .inactive { 
   opacity: 0.4;
 }
@@ -82,7 +104,6 @@
 #helpbar .shortcut {
   float: left;
   clear: both;
-  vertical-align: top;
   padding: 0px 10px;
   margin: 10px 0px;
 }
@@ -95,14 +116,11 @@
 }
 
 #helpbar .shortcut .key-combo {
+  width: 40px;
   font-size: 12px;
   font-weight: 600;
   color: #596573;
   margin-right: 8px;
-}
-
-#helpbar .symbol {
-
 }
 
 .tagsinput-title,
@@ -125,19 +143,19 @@
   left:0;
   padding: 20px;
   width: 100%;
+  height: 20px;
   font-size: 15px;
   color: #FFF;
   background-color: #333;
 }
+
 #message {
-  margin-top: 10px;
-  float:left;
+  float: left;
   margin-left: 50px;
 }
 
 .page-photographer-tag #inner-wrapper {
   height: 750px;
-  
 }
 
 #message-bar .icons {
@@ -154,17 +172,17 @@
 }
 
 #message-bar .delete-icon {
-  background-image: url(images/delete_action.png);
+  background-image: url('images/delete_action.png');
 }
 
 #message-bar .delete-error-icon {
-  background-image: url(images/delete-error.png);
+  background-image: url('images/delete-error.png');
 }
 
 #message-bar .save-icon {
-  background-image: url(images/saving.png);
+  background-image: url('images/saving.png');
 }
 
 #message-bar .save-error-icon {
-  background-image: url(images/saving-error.png);
+  background-image: url('images/saving-error.png');
 }
