Refactoring of photo_seach.js  - added methods to cart object  - removed use of windows object  - added variables for some jQuery selectors  - added methods to some jQuery selectors  - moved initial selected items to settings  - page initialization without $ajax (used settings)

--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -76,14 +76,20 @@ table {
 	float: left;
 }
 
+.page-search-result .form-wrapper {
+  padding: 0;
+  margin-left: 0;
+}
+
 .page-search-result .fieldset-wrapper {
-	width: 980px;
+  margin: 0;
+  padding: 0;
+	width: 978px;
 	border: 1px solid #ccc;
 	float: left;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	margin-left: -10px;
 }
 
 #photo_cost {
@@ -205,6 +211,10 @@ table {
 .page-search-result .contextual-links-region {
 	float: left;
 	/*width: 435px;*/
+}
+
+.page-search-result .messages.status {
+  display: none;
 }
 
 .thumbnail {
