Refactored list_cart_items function as it is now used at the backend.

--- a/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
+++ b/sites/all/modules/custom/ubercart_custom/ubercart_custom.css
@@ -79,6 +79,10 @@
 	display:block;
 }
 
+.page-cart-checkout .messages.status {
+  display: none;
+}
+
 .image-thumbnail img {
 	float:right;
 	max-height:100%;
