--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -319,7 +319,7 @@
 .node-type-event .view-event-carousel .jcarousel-item-placeholder {
   height: 192px;
   width: 192px;
-  background: #fff url("../images/throbber.gif") no-repeat center center;
+  /* background: #fff url("../images/throbber.gif") no-repeat center center; */
   color: #000;
 }
 
@@ -331,7 +331,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background-image: url("../images/arrows-runmemo.png");
+/*  background-image: url("../images/arrows-runmemo.png"); */
 }
 
 .node-type-event .view-event-carousel .jcarousel-next-disabled,
