--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1305,8 +1305,7 @@ a#guide:hover {
   color: #AAA;
 	font-size: 14px;
 	font-weight: 800;
-	margin-top: 14px;
-	width: 130px;
+	line-height: 42px;
 }
 
 #user-profile-form fieldset.collapsible {
@@ -2124,7 +2123,8 @@ table.cart-block-summary tbody tr td {
 }
 
 #user-register-form .form-submit {
-	width: 150px;
+	padding-left: 20px;
+  padding-right: 20px;
   margin-right:30px;
 }
 
@@ -2133,18 +2133,11 @@ table.cart-block-summary tbody tr td {
 }
 
 .page-user-password #user-pass .form-text {
-	-webkit-box-shadow: none !important;
-	border: 1px solid #DEE4E7;
-	border-bottom-left-radius: 5px 5px;
-	border-bottom-right-radius: 5px 5px;
-	border-top-left-radius: 5px 5px;
-	border-top-right-radius: 5px 5px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 13px;
-	height: 30px;
-	line-height: 27px;
-	padding: 2px;
-	width: 300px;
+	padding-left: 230px;
+}
+
+.page-user-password form {
+  width: auto;
 }
 
 /*Review Order*/
@@ -2505,7 +2498,6 @@ table.cart-block-summary tbody tr td {
 	float: right;
 	margin-top: 15px;
 	/* layout */
-  width: 150px;
 	height: 43px;
 	border:none;
 	-webkit-border-radius: 5px;
