--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2126,6 +2126,7 @@ table.cart-block-summary tbody tr td {
 	padding-left: 20px;
   padding-right: 20px;
   margin-right:30px;
+  width: auto;
 }
 
 .page-login #forgot_pwd {
@@ -2498,6 +2499,7 @@ table.cart-block-summary tbody tr td {
 	float: right;
 	margin-top: 15px;
 	/* layout */
+  width: 150px;
 	height: 43px;
 	border:none;
 	-webkit-border-radius: 5px;
